<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="userViewModel"
            type="com.example.loginwidthmvvm.viewmodel.UserViewModel" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_8sdp">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvUpdate"
            style="@style/custom_TextView_Login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            app:passwordToggleEnabled="true">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:inputType="phone" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/imgUpdate"
            style="@style/custom_Button"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/update" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>