<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.login.LoginWithMvvmFragment">

    <data>

        <variable
            name="userViewModel"
            type="com.example.loginwidthmvvm.viewmodel.UserViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgLogo"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="@dimen/_180sdp"
                android:layout_marginTop="@dimen/_48sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/login_logo" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvLogin"
                style="@style/custom_TextView_Login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24sdp"
                android:text="@string/login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.114"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgLogo" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutUsername"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLogin">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Username"
                    android:inputType="text"
                    android:text="@={userViewModel.username}"
                    android:textAllCaps="false" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutPassword"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutUsername"
                app:passwordToggleEnabled="true">

                //dấu "=", nhận các thay đổi dữ liệu cho thuộc tính và lắng nghe cập nhật của người
                dùng cùng một lúc.

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Password"
                    android:inputType="textPassword|text"
                    android:text="@={userViewModel.password}"
                    android:textAllCaps="false" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/ibLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_36sdp"
                android:background="@drawable/button_gradient_oval"
                android:onClick="@{() -> userViewModel.login()}"
                android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.782"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPassword" />

            <TextView
                android:id="@+id/tvDontAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_56sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/dont_have_account"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tvSignup"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ibLogin"
                app:layout_constraintVertical_bias="0.325" />

            <TextView
                android:id="@+id/tvSignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_56sdp"
                android:text="@string/signup_vn"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvDontAccount"
                app:layout_constraintTop_toTopOf="@+id/tvDontAccount"
                app:layout_constraintVertical_bias="0.0" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>